# usbstd

./: .gitignore  CMakeLists.txt  usb_class.hpp  usb_helper_stringtable.hpp  usbstd.cpp  usbstd.hpp
firmware/usbstd/: CMakeLists.txt  usb_bos.hpp  usb_cdc.hpp  usb_descriptor.hpp  usb_request.hpp  usbstd.hpp
